refactor: reorganize ApiWebService implementation and update package structure